# Ping_Server_Bot

./: CHANGELOG.md  README.md  ping-project2.cabal  test.db  test2.db
app/: Bot.hs  DBUtils.hs  Main.hs  Schema.hs  create_table_query.sql
dist-newstyle/cache/: compiler  config  elaborated-plan  plan.json  solver-plan  source-hashes  up-to-date
